[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acmeeh"
version = "1.0.0"
description = "Enterprise ACME (RFC 8555) server for internal PKI"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "miichoow" },
]
keywords = ["acme", "pki", "certificates", "tls", "rfc8555", "ca"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Security",
    "Topic :: System :: Networking",
]
dependencies = [
    "flask>=3.1,<4",
    "cryptography>=46,<48",
    "dnspython>=2.8,<3",
    "jinja2>=3.1,<4",
    "psycopg[binary]>=3.3,<4",
    "pyConfigKit>=1.1,<2",
    "PyPGKit>=1.0,<2",
]

[project.optional-dependencies]
hsm = ["python-pkcs11>=0.7"]
acme-proxy = ["acmeow>=1.1"]
server = ["gunicorn>=22,<24; sys_platform != 'win32'"]
dev = [
    "pytest>=9,<10",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/miichoow/ACMEEH"
Documentation = "https://miichoow.github.io/ACMEEH/"
Repository = "https://github.com/miichoow/ACMEEH"
Issues = "https://github.com/miichoow/ACMEEH/issues"

[project.scripts]
acmeeh = "acmeeh.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
acmeeh = ["config/schema.json", "db/schema.sql", "notifications/templates/*", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.coverage.run]
source = ["acmeeh"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

# ── Ruff ──────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "F",        # pyflakes
    "E", "W",   # pycodestyle
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "A",        # flake8-builtins
    "C4",       # flake8-comprehensions
    "SIM",      # flake8-simplify
    "S",        # flake8-bandit
    "PLC",      # pylint convention
    "PLE",      # pylint error
    "PLR",      # pylint refactor
    "PLW",      # pylint warning
    "C90",      # mccabe complexity
]
ignore = [
    "S101",     # assert — used in tests
    "S105",     # hardcoded-password-string — false positives on config keys
    "S106",     # hardcoded-password-func-arg — false positives in tests
    "S108",     # hardcoded-temp-file — /tmp usage is intentional
    "S310",     # suspicious-url-open — urllib usage is intentional
    "S324",     # hashlib-insecure — MD5/SHA1 used for OCSP/fingerprints, not security
    "S608",     # hardcoded-sql — SQL is parameterized, ruff can't see that
    "PLR0913",  # too-many-arguments — unavoidable in DI/settings
    "PLR0912",  # too-many-branches — complex but readable
    "PLR0915",  # too-many-statements — complex but readable
    "PLR2004",  # magic-value-comparison — too noisy
    "SLF001",   # private-member-access — used for internal wiring
    "BLE001",   # blind-except — intentional in resilience code
    "N814",     # camelcase-imported-as-constant — used for type aliases
    "PLC0415",  # import-outside-toplevel — deferred imports by design
    "C901",     # complex-structure — accepted in DI container
    "E501",     # line-too-long — handled by formatter
    "SIM117",   # multiple-with-statements — style preference
    "UP035",    # deprecated-import — keep compat with 3.12
    "B904",     # raise-without-from-inside-except — intentional re-raises
    "C408",     # unnecessary-collection-call — dict() is more readable with kwargs
    "B027",     # empty-method-without-abstract — intentional no-op hooks
    "B024",     # abstract-base-class-without-abstract-method — by design
    "N803",     # invalid-argument-name — used for crypto params (N, e, etc.)
    "N818",     # error-suffix-on-exception-name — existing naming convention
    "SIM102",   # collapsible-if — readability over brevity
    "SIM108",   # if-else-block — readability over ternary
    "PLW0108",  # unnecessary-lambda — lambda wraps type-ignored calls
    "PLW0211",  # bad-staticmethod-argument — existing convention
    "PLW2901",  # redefined-loop-name — intentional reassignment in loops
]

[tool.ruff.lint.per-file-ignores]
"src/acmeeh/admin/routes.py" = [
    "F841",     # get_container() calls ensure app context
]
"tests/**/*.py" = [
    "S",        # bandit — test code doesn't need security checks
    "N",        # naming — relaxed in tests
    "PLR",      # pylint refactor — relaxed in tests
    "SLF001",   # private access in tests is fine
    "F841",     # unused variable — common in test setup
    "B",        # bugbear — relaxed in tests
    "E402",     # import-not-at-top — test files use inline imports
    "SIM",      # simplify — style flexibility in tests
    "PLW",      # pylint warning — relaxed in tests
]

[tool.ruff.lint.isort]
known-first-party = ["acmeeh"]

[tool.ruff.lint.mccabe]
max-complexity = 15

# ── Mypy ──────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["acmeeh"]
strict = false
warn_return_any = false
warn_unused_configs = true
warn_unreachable = false
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "acmeeh.ca.internal",
    "acmeeh.hooks.registry",
]
disable_error_code = ["arg-type", "misc"]

[[tool.mypy.overrides]]
module = "acmeeh.api.*"
disable_error_code = ["arg-type", "union-attr"]

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = [
    "arg-type", "attr-defined", "method-assign", "assignment",
    "return-value", "union-attr", "misc", "var-annotated",
    "valid-type", "func-returns-value", "call-overload", "index",
]
